<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_movie_item"
    tools:context=".MovieViewActivity">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/movie_poster"
        android:src="@drawable/ic_movie_poster" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_movie_item"
        android:layout_toEndOf="@id/movie_poster"
        android:hint="@string/title"
        android:textSize="@dimen/movie_title_font_size" />

    <TextView
        android:id="@+id/movie_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_title"
        android:layout_margin="@dimen/margin_movie_item"
        android:layout_toEndOf="@id/movie_poster"
        android:hint="@string/year"
        android:textSize="@dimen/movie_year_font_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_year"
        android:layout_toEndOf="@id/movie_poster"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ratingStar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/padding_movie_item"
            android:layout_weight="1"
            android:contentDescription="@string/movie_rating"
            android:src="@drawable/ic_star_rating" />

        <TextView
            android:id="@+id/ratingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/rating_example"
            android:textSize="@dimen/rating_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shortInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_poster"
        android:layout_margin="@dimen/margin_movie_item"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_movie_item"
            android:layout_marginTop="@dimen/margin_movie_item"
            android:text="@string/rated" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_movie_item"
            android:layout_marginTop="@dimen/margin_movie_item"
            android:text="@string/runtime" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_movie_item"
            android:layout_marginTop="@dimen/margin_movie_item"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_movie_item"
            android:layout_marginTop="@dimen/margin_movie_item"
            android:text="@string/release" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_movie_item"
            android:layout_marginTop="@dimen/margin_movie_item"
            android:text="@string/plot" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/director_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shortInfoContainer"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/director_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_movie_item"
            android:layout_weight="1"
            android:text="@string/director"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/director"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_movie_item"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/writer_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/director_group"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/writer_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_movie_item"
            android:layout_weight="1"
            android:text="@string/writers"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/writer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_movie_item"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stars_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/writer_group"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stars_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_movie_item"
            android:layout_weight="1"
            android:text="@string/stars"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_movie_item"
            android:layout_weight="4" />
    </LinearLayout>

</RelativeLayout>