<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_movie_item">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/movie_poster" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_movie_item"
        android:layout_toEndOf="@id/movie_poster"
        android:hint="@string/title" />

    <TextView
        android:id="@+id/movie_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_title"
        android:layout_margin="@dimen/margin_movie_item"
        android:layout_toEndOf="@id/movie_poster"
        android:hint="@string/year" />


</RelativeLayout>